spring.jpa.hibernate.ddl-auto=update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=chandlertu
 spring.datasource.password=Tu19870320
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.jpa.show-sql = true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
